# bewise.ai

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/config/: nginx.conf  settings.py
src/database/: base.py  dependecies.py
src/database/models/: models.py
